@@ -50,6 +50,7 @@
 - move timeout to map_source (allow per direct map timeout).
 - dont retry ldap connect if not required.
 - fix getautomntbyname_r() declaration.
+- fix compilation of defaults.c without openldap.
 
 28/06/2011 autofs-5.0.6
 -----------------------
